src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The following field is used to identify whether a task was an auto-generated task - used for some background logic</description>
        <label>Auto Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Objective__c</fullName>
        <description>CORE - Picklist of high level objective of call</description>
        <label>Call Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/solution conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training/set-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Study_Description__c</fullName>
        <label>Case Study Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>The following field is used for logic for the auto-event creation when a returning student interview is cancelled 3 times a 4th interview should be scheduled which is scheduled for the enrolment date/academic start date.</description>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_In_Clinic_Comment__c</fullName>
        <label>Drop In Clinic Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drop_In_Clinic_Date__c</fullName>
        <label>Drop In Clinic Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_In_Clinic_Type__c</fullName>
        <label>Drop In Clinic Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_In_Clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop In Clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Records the date that the Activity is due.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EM_Comments__c</fullName>
        <description>Engagement Meeting Comments</description>
        <label>Engagement Meeting Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EM_Type__c</fullName>
        <label>Engagement Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Meeting_Date__c</fullName>
        <label>Engagement Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <description>An auto number field that creates a unique identifier for event records.</description>
        <externalId>true</externalId>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FDOC_Comments__c</fullName>
        <description>FDOC Comments</description>
        <label>FDOC Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FDOC_Date__c</fullName>
        <label>FDOC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOC_Type__c</fullName>
        <label>FDOC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FDOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FDOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faculty_Advisor_Description__c</fullName>
        <label>Faculty Advisor Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Faculty_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faculty Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HE_Event_Type__c</fullName>
        <description>This field identifies the type of event the sales rep is scheduling - i.e. FDOC, Training, etc...</description>
        <label>HE Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HE_Subtype__c</fullName>
        <description>This field allows the sales rep to identify which particular type of task I may be creating to manage my opportunities depending on Notes or Follow-Up - i.e. Pre-Call, Sales Call, Schedule FDOC/Training, Sample, Technical Assistance, Digital Access, Schedule Presentation, Product.</description>
        <label>HE Subtype</label>
        <picklist>
            <controllingField>HE_Task_Type__c</controllingField>
            <picklistValues>
                <fullName>Schedule FDOC/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HE_Task_Type__c</fullName>
        <description>This field allows the user to identify whether they are creating a Note or Follow-Up Task</description>
        <label>HE Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impl_Type__c</fullName>
        <label>Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Comments__c</fullName>
        <description>Implementation Comments</description>
        <label>Implementation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labs__c</fullName>
        <description>Labs</description>
        <label>Labs</label>
        <picklist>
            <picklistValues>
                <fullName>MyEconLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyAccountingLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyFinanceLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyMathLab Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyWritingLab Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyManagementLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyMktLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyOMLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyEmployabilityLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyStrategyLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyPsychLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyDevelopmentLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyProgrammingLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyITLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyLawChamber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastering Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastering Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastering Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastering A&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastering Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastering Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastering Microbiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Lab opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Product_Referral__c</fullName>
        <description>CORE - used to track NPS of product referral.</description>
        <inlineHelpText>On a scale of 0 - 10 where 0 is never and 10 is every time, How likely would the client be to refer Pearson&apos;s product to a colleague?</inlineHelpText>
        <label>Likelihood of Product Referral</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Service_Referral__c</fullName>
        <description>CORE - used to track Net Promoter Score feedback.</description>
        <inlineHelpText>On a scale of 0 - 10 where 0 is never and 10 is every time, how likely would the client be to refer Pearson&apos;s service to a colleague?</inlineHelpText>
        <label>Likelihood of Service Referral</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Objective__c</fullName>
        <description>CORE - Picklist of high level objective of call</description>
        <label>Meeting Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/solution conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training/set-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NPS_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE - used to flag that the task is an NPS Feedback record. (Used for reporting the NPS Feedback)</description>
        <label>NPS Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Rating_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS Rating Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <description>The number of students attending the event</description>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Call_Objective__c</fullName>
        <description>CORE - Must be filled in if other is selected in call objective</description>
        <label>Other Call Objective</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Meeting_Objective__c</fullName>
        <description>CORE - Must be filled in if other is selected in call objective</description>
        <label>Other Meeting Objective</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>CTIMGI: Specifies the result of the interview event.</description>
        <label>Outcome</label>
        <picklist>
            <controllingField>subject__c</controllingField>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in registering now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning to enrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not planning to enrol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <description>The type of presenter for the event</description>
        <label>Presenter</label>
        <picklist>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Reason__c</fullName>
        <description>CORE - tracks the reason behind the NPS.</description>
        <inlineHelpText>Why was this NPS rating given?</inlineHelpText>
        <label>Rating Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <description>CTIMGI: Specifies the reason that a interview was cancelled</description>
        <label>Reason for Cancellation</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Cancels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewer Cancels</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CTIMGI: Identifies if the Students Sponsor attended the Student  pre registration interview.</description>
        <label>Sponsor Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CTIMGI: Captures the status of the event activity type</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>To be Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Comments__c</fullName>
        <description>Training Comments</description>
        <label>Training Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <label>Training Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Global CTIMGI: This field Identifies the way that the Interview is conducted.</description>
        <label>Interview Method</label>
        <picklist>
            <picklistValues>
                <fullName>Face To Face Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UEM_Comment__c</fullName>
        <label>UEM Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UEM_Date__c</fullName>
        <label>UEM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UEM_Type__c</fullName>
        <label>UEM Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UEM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X14_Day_Touch_Point_Comments__c</fullName>
        <label>14 Day Touch Point Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X14_Day_Touch_Point_Date__c</fullName>
        <label>14 Day Touch Point Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X14_Day_Touch_Point_Type__c</fullName>
        <label>14 Day Touch Point Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X14_Day_Touch_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <label>14 Day Touch Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_Day_Touch_Point_Comments__c</fullName>
        <label>30 Day Touch Point Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X30_Day_Touch_Point_Date__c</fullName>
        <label>30 Day Touch Point Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X30_Day_Touch_Point_Type__c</fullName>
        <label>30 Day Touch Point Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X30_Day_Touch_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <label>30 Day Touch Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X60_Day_Touch_Point_Comments__c</fullName>
        <label>60 Day Touch Point Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X60_Day_Touch_Point_Date__c</fullName>
        <label>60 Day Touch Point Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X60_Day_Touch_Point_Type__c</fullName>
        <label>60 Day Touch Point Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X60_Day_Touch_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <label>60 Day Touch Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eBook__c</fullName>
        <label>eBook</label>
        <picklist>
            <picklistValues>
                <fullName>Pearson eText</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vital Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CourseSmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kortext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <description>CTIMGI: Identifies the type of interview the interview event is.</description>
        <label>Interview Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returning Student Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exit interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor Interview</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>